--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,13 @@
     <packaging>jar</packaging>
     <version>1.0.0-SNAPSHOT</version>
     <inceptionYear>2015</inceptionYear>
+    <licenses>
+        <license>
+            <name>LGPL 2.1</name>
+            <url>http://www.gnu.org/licenses/old-licenses/lgpl-2.1-standalone.html</url>
+            <comments>LGPL</comments>
+        </license>
+    </licenses>
     <developers>
         <developer>
             <id>hendrik</id>
